api: Make API Visibility field optional with default
